2004-02-08 0.8.1.18  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/callback.h, client/common/callback.c, common/state.c,
	common/state.h: Added cb_disconnect and sm_close
	
2004-02-06 0.8.1.17  Roland Clobus <rclobus@bigfoot.com>

	* client/gtk/player.c (player_show_connected_at_row): Fixed bug
	displaying random line below player icon.

2004-01-26 0.8.1.16  Roland Clobus <rclobus@bigfoot.com>

	* server/server.c (game_server_start): Show random seed in the server.

2004-01-25 0.8.1.15  Bas Wijnen <b.wijnen@phys.rug.nl>
	* common/state.c, common/state.h: Added a stackdump when overflow
	occurs.
	* client/common/client.c, common/state.c, common/state.h: Added
	sm_push_noenter, sm_pop_noenter, sm_goto_noenter, needed for the AI.
	* client/gtk/histogram.c: Added enter after last line

2004-01-15  Jeff Breidenbach  <jab@debian.org>

	* doc/Makefile.am, doc/gnocatan-meta-server.6,
	debian/gnocatan-meta-server.files: Added metaserver manpage.
	
2004-01-11 0.8.1.14  Roland Clobus <rclobus@bigfoot.com>

	* client/callback.h, client/common/client.c, client/common/turn.c,
	client/gtk/callbacks.c: renamed callbacks.dice to
	callbacks.rolled_dice.
	* client/gtk/callbacks.c, client/gtk/frontend.h,
	client/gtk/interface.c: renamed frontend_dice to frontend_rolled_dice.
	* client/gtk/callbacks.c (frontend_init_game): added histogram_init.
	* client/gtk/guimap.c, client/gtk/guimap.h: add color lightblue.
	* client/gtk/histogram.c, client/gtk/histogram.h: complete rewrite of
	the histogram diagram. Now fully scalable.
	* client/common/resource.c (resource_format_num): support "no
	resources" situation.

2004-01-11 0.8.1.13  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/callback.h, client/common/client.c, client/gtk/callbacks.c,
	client/gtk/frontend.c, client/gtk/ftontend.h, client/gtk/trade.c:
	Fixes bug with maritime trade
	* client/common/callback.c, client/gtk/offline.c: Fix for unknown host
	bug
	* ai/client.c: AI can handle auto-discard